fix: correcao de regras de validacao